--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 modulos_de_control/__pycache__/*
 
-!modulos_de_control/Modulos/Datos/Plantillas/*
+!(modulos_de_control/Modulos/Datos/Plantillas/*)
 
 modulos_de_control/Modulos/Datos/*
 
